--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,5 +2,6 @@ spring:
   h2:
     console:
       enabled: true
-  datasource:
-    url: jdbc:h2:file:~/h2/people-graphql
+      path: /h2-console
+server:
+  port: 9045
