--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,5 +3,7 @@ spring:
     console:
       enabled: true
       path: /h2-console
+  jackson:
+    default-property-inclusion: non_null
 server:
   port: 9045
